Added CSS styles and About section

--- a/index.html
+++ b/index.html
@@ -2,21 +2,33 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>My Resume</title>
+        <title>My Pesonal page</title>
+        <link rel="stylesheet" href="styles/style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet"> 
     </head>
 
     <body>
-        <h1>My personal resume</h1>
         <img src="images/profile-image.jpg" alt="My profile image">
+        <h1>MY PERSONAL RESUME</h1>
+        <h2 class="center">R&D Engineer | Deep learning engineering | CFD modeling and simulation</h2>
         <h2> <strong>PERSONAL INFO:</strong></h2>
         <ul>
             <li>Full name: Soufiane BOURSEN</li>
             <li>Occupation: Research and developement engineer</li>
             <li>Date of birth: 29 mars 1995</li>
-            <li>Github: <a href="https://github.com/Sboursen">link to github</a></li>
-            <li>Linkedin: <a href="https://www.linkedin.com/in/sboursen/">link to linkedin</a> </li>
+            <li>Github: <a href="https://github.com/Sboursen">github/Sboursen</a></li>
+            <li>Linkedin: <a href="https://www.linkedin.com/in/sboursen/">linkedin/in/sboursen</a> </li>
+            <li>Phone number: +212-660-440-199</li>
         </ul>
-
-
+        <h2>About</h2>
+        <p>
+            3~years experienced research & development engineer using predictive modeling and simulationto solve challenging industry problems.
+            Extremely passionate to build deep learning models, with a good ability to develop, train and fine-tune computer vision classification systems.
+            Experienced inusing computational fluid dynamics to build simulation based predictive programs for chemical processes.
+            Driven by the desire for self-improvement, I am a team player and a fast learner.
+        </p>
     </body>
+
+
+    
 </html>
