Added some interactivity using js

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     </head>
 
     <body>
-        <img src="images/profile-image.jpg" alt="My profile image">
-        <h1>MY PERSONAL RESUME</h1>
+        <!-- <img class="wall-style" src="images/wallpaper-image.jpg" alt="Wall"> -->
+        <img class="profile-style" src="images/profile-image.jpg" alt="My profile image">
+        <h1>MY'Hi ' + myName + '! This is my personal website' PERSONAL RESUME</h1>
         <h2 class="center">R&D Engineer | Deep learning engineering | CFD modeling and simulation</h2>
         <h2> <strong>PERSONAL INFO:</strong></h2>
         <ul>
@@ -27,8 +28,11 @@
             Experienced inusing computational fluid dynamics to build simulation based predictive programs for chemical processes.
             Driven by the desire for self-improvement, I am a team player and a fast learner.
         </p>
+
+        <button>Change user</button>
+        <script src="scripts/main.js"></script>
     </body>
 
 
-    
+
 </html>
